// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stage_NEW create with Config: config stage 1`] = `
Stage {
  "_config": {
    "run": [Function],
  },
  "run": undefined,
  [Symbol(stage)]: true,
}
`;

exports[`Stage_NEW create with Lambda 2: lambda stage 1`] = `
Stage {
  "_config": {
    "run": [Function],
  },
  "run": undefined,
  [Symbol(stage)]: true,
}
`;

exports[`Stage_NEW create with Lambda 3: lambda stage 1`] = `
Stage {
  "_config": {
    "run": [Function],
  },
  "run": undefined,
  [Symbol(stage)]: true,
}
`;

exports[`Stage_NEW create with function: function stage 1`] = `
Stage {
  "_config": {
    "run": [Function],
  },
  "run": undefined,
  [Symbol(stage)]: true,
}
`;

exports[`Stage_NEW initialize other stuff sucessfully: schema stage 1 1`] = `
Stage {
  "_config": {
    "ensure": [Function],
    "name": "stage",
    "rescue": [Function],
    "run": [Function],
  },
  "run": undefined,
  [Symbol(stage)]: true,
}
`;

exports[`Stage_NEW input validation 1`] = `[ComplexError]`;
